force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>Visit Management</label>
    <nameField>
        <displayFormat>B-{YYYY}-{0}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Management</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>