force-app/main/default/objects/Visit__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(
    ISPICKVAL(Account__r.ComplianceCheck__c, &apos;Passed&apos;),
    IMAGE(&quot;/resource/Green&quot;, &quot;Green&quot;, 35, 40),
    IF(
        ISPICKVAL(Account__r.ComplianceCheck__c, &apos;Failed&apos;),
        IMAGE(&quot;/resource/Red&quot;, &quot;Red&quot;, 35, 40),
        IF(
            ISPICKVAL(Account__r.ComplianceCheck__c, &apos;Outstanding&apos;),
            IMAGE(&quot;/resource/Red&quot;, &quot;Red&quot;, 35, 40),
            &quot;Error&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Text</type>
</CustomField>