force-app/main/default/objects/Visit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>160</length>
    <type>Text</type>
</CustomField>