force-app/main/default/objects/Visit__c/fields/InformationforMillTour__c.field-meta.xml
<CustomField>
    <fullName>InformationforMillTour__c</fullName>
    <inlineHelpText>Please provide detailed information for the mill tour (e.g. date, time, guide, ...).</inlineHelpText>
    <label>Information for Mill Tour</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>