force-app/main/default/objects/Visit__c/fields/ManualStatusChange__c.field-meta.xml
<CustomField>
    <fullName>ManualStatusChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ManualStatusChange</label>
    <type>Checkbox</type>
</CustomField>