force-app/main/default/objects/Visit__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>TEXT(Account__r.Segment1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>