force-app/main/default/objects/Visit__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Fair / Event</fullName>
            </value>
            <value>
                <fullName>Conference / Presentation</fullName>
            </value>
            <value>
                <fullName>Mill Tour</fullName>
            </value>
            <value>
                <fullName>Commercial Meeting</fullName>
            </value>
            <value>
                <fullName>Technical Meeting</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>