force-app/main/default/objects/Visit__c/fields/VisitDateEnd__c.field-meta.xml
<CustomField>
    <fullName>VisitDateEnd__c</fullName>
    <label>Visit Date End</label>
    <type>Date</type>
</CustomField>