force-app/main/default/objects/Visit__c/fields/VisitLocation__c.field-meta.xml
<CustomField>
    <fullName>VisitLocation__c</fullName>
    <inlineHelpText>Internal visit:
The field &apos;Visit Location&apos; is initially prefilled with the address of the head office (DH or SAG) after saving the record. This address can be modified afterwards.
External visit:
The field &apos;Visit Location&apos; is initially prefilled with the address of the account (if an account is linked to the visit) after saving the record. This address can be modified afterwards.</inlineHelpText>
    <label>Visit Location</label>
    <type>Address</type>
</CustomField>