force-app/main/default/objects/Visit__c/fields/VisitType__c.field-meta.xml
<CustomField>
    <fullName>VisitType__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>