force-app/main/default/objects/Visit__c/validationRules/AccountActiveCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountActiveCheck</fullName>
    <active>true</active>
    <description>Visit cannot be related to an account which has been set to Deactive</description>
    <errorConditionFormula>Account__r.Inactive__c = True &amp;&amp; ( $Profile.Name = &apos;DH Customer Administration&apos; || $Profile.Name = &apos;DH Marketing Profile&apos; || $Profile.Name = &apos;DH Sales Profile&apos;) &amp;&amp; ISNEW() = True</errorConditionFormula>
    <errorMessage>The account is deactivated, therefore this function is not available.</errorMessage>
</ValidationRule>