force-app/main/default/objects/Visit__c/validationRules/CheckBusinessAreaonAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBusinessAreaonAccount</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(Account__r.AccountBA__c ,VisitBA__c))</errorConditionFormula>
    <errorMessage>Please select a business area which is assigned to the related account.</errorMessage>
</ValidationRule>