force-app/main/default/objects/Visit__c/validationRules/ValidationRuleOnStatusChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationRuleOnStatusChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.ByPassLogic__c.ByPassValidation__c),

AND($Profile.Name &lt;&gt; &quot;Systemadministrator&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;),

OR(
AND(ISPICKVAL(PRIORVALUE(Status__c), &quot;Visited&quot;),
VisitDateEnd__c &lt; TODAY(),
ISPICKVAL(Status__c, &quot;In Planning&quot;),
ISCHANGED(Status__c) ),

AND(LEN ( NextSteps__c ) = 0,TEXT(Status__c) = &quot;Completed&quot; ),
AND(LEN( Summary__c ) = 0,TEXT(Status__c) = &quot;Completed&quot; ),

AND(
ISPICKVAL(Status__c, &quot;Visited&quot;),
ISPICKVAL(PRIORVALUE(Status__c), &quot;In Planning&quot;),
ISCHANGED(Status__c),
NOT(ManualStatusChange__c)
))
)</errorConditionFormula>
    <errorMessage>This status change is not possible. Please refer to the guidance for this status value.</errorMessage>
</ValidationRule>