force-app/main/default/objects/Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>VisitDateStart__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>VisitType__c</columns>
    <columns>Account__c</columns>
    <columns>Segment__c</columns>
    <columns>BusinessArea__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>