force-app/main/default/objects/Visit__c/listViews/ErfolgteBesuche.listView-meta.xml
<ListView>
    <fullName>ErfolgteBesuche</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>VisitDateStart__c</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>VisitType__c</columns>
    <columns>Account__c</columns>
    <columns>Segment__c</columns>
    <columns>BusinessArea__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Visited</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Erfolgte Besuche</label>
</ListView>